ASTERIXDB-1482: Added NCServiceExecutionIT, HyracksVirtualCluster.
NCServiceExecutionIT runs all execution tests against a local cluster
managed by the NCService deployment framework.

HyracksVirtualCluster offers programmatic NCService deployment
control along with improved HyracksNCProcess/HyracksCCProcess.

Further fixes and improvements:

    1. Fix handling of iodevices/storagedir (ASTERIXDB-1482)
    2. Proper handling of [nc] default section in all cases
    3. Ensure asterixnc, etc. scripts are executable
    4. Consolidate Ini handling
    5. Pruned some dead code, including VirtualClusterDriver
    6. A bit of refactoring and extended commenting

Change-Id: If3eb450782a595cf85d04a2c2e9cc732564e65e6
Reviewed-on: https://asterix-gerrit.ics.uci.edu/958
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Ian Maxon <imaxon@apache.org>